--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,4 +15,7 @@ export(pois_mean_split)
 export(pois_mean_split_mixture)
 export(simu_study_poisson_mean)
 import(ebnm)
+import(nleqslv)
 import(nloptr)
+import(parallel)
+import(rootSolve)
