--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(gen_data_t)
 export(nb_mean_lower_bound)
 export(nb_mean_polya_gamma)
 export(pois_mean_GG)
+export(pois_mean_GG_opt_obj)
+export(pois_mean_GG_opt_obj_gradient)
 export(pois_mean_GMG)
 export(pois_mean_GMGM)
 export(pois_mean_log1exp)
