--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(gen_data_exp)
 export(gen_data_gamma)
 export(gen_data_log_link)
 export(gen_data_t)
+export(mae)
+export(mse)
 export(nb_mean_lower_bound)
 export(nb_mean_polya_gamma)
 export(pois_mean_GG)
@@ -17,6 +19,7 @@ export(pois_mean_penalized_compound)
 export(pois_mean_penalized_inversion)
 export(pois_mean_split)
 export(pois_mean_split_mixture)
+export(rmse)
 export(simu_study_poisson_mean)
 import(ebnm)
 import(nleqslv)
