change output, change mixsd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,9 @@ export(pois_mean_split)
 export(pois_mean_split_mixture)
 export(rmse)
 export(simu_study_poisson_mean)
+import(ashr)
 import(ebnm)
+import(ebpm)
 import(nleqslv)
 import(nloptr)
 import(parallel)
