add constant in obj

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,10 +21,11 @@ export(pois_mean_split)
 export(pois_mean_split_mixture)
 export(rmse)
 export(simu_study_poisson_mean)
-import(ashr)
 import(ebnm)
-import(ebpm)
 import(nleqslv)
 import(nloptr)
 import(parallel)
 import(rootSolve)
+importFrom(ashr,ash_pois)
+importFrom(ebpm,ebpm_exponential_mixture)
+importFrom(ebpm,ebpm_gamma)
