--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,6 @@ export(mse)
 export(nb_mean_lower_bound)
 export(nb_mean_polya_gamma)
 export(pois_mean_GG)
-export(pois_mean_GG_opt_obj)
-export(pois_mean_GG_opt_obj_gradient)
 export(pois_mean_GMG)
 export(pois_mean_GMGM)
 export(pois_mean_log1exp)
@@ -29,3 +27,4 @@ import(rootSolve)
 importFrom(ashr,ash_pois)
 importFrom(ebpm,ebpm_exponential_mixture)
 importFrom(ebpm,ebpm_gamma)
+importFrom(nloptr,lbfgs)
