--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(pois_mean_penalized_inversion)
 export(pois_mean_split)
 export(pois_mean_split_mixture)
 export(rmse)
+export(select_mixsd)
 export(simu_study_poisson_mean)
 import(ebnm)
 import(nleqslv)
