--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(pois_mean_split_mixture)
 export(rmse)
 export(select_mixsd)
 export(simu_study_poisson_mean)
+export(vga_optimize)
 import(ebnm)
 import(nleqslv)
 import(nloptr)
@@ -27,4 +28,3 @@ import(rootSolve)
 importFrom(ashr,ash_pois)
 importFrom(ebpm,ebpm_exponential_mixture)
 importFrom(ebpm,ebpm_gamma)
-importFrom(nloptr,lbfgs)
