let split do ebnm first

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(pois_mean_log1exp)
 export(pois_mean_penalized_compound)
 export(pois_mean_penalized_inversion)
 export(pois_mean_split)
+export(pois_mean_split2)
 export(pois_mean_split_mixture)
 export(rmse)
 export(select_mixsd)
