--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,12 +15,11 @@ export(pois_mean_log1exp)
 export(pois_mean_penalized_compound)
 export(pois_mean_penalized_inversion)
 export(pois_mean_split)
-export(pois_mean_split2)
 export(pois_mean_split_mixture)
 export(rmse)
 export(select_mixsd)
 export(simu_study_poisson_mean)
-export(vga_optimize)
+export(vga_pois_solver)
 import(ebnm)
 import(nleqslv)
 import(nloptr)
