--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ export(rmse)
 export(select_mixsd)
 export(simu_study_poisson_mean)
 export(vga_pois_solver)
+export(vga_pois_solver_Newton)
+export(vga_pois_solver_bisection)
 import(ebnm)
 import(nloptr)
 import(parallel)
