add a 1 iter vga version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(simu_study_poisson_mean)
 export(vga_pois_solver)
 export(vga_pois_solver_Newton)
 export(vga_pois_solver_bisection)
+export(vga_pois_solver_newton_1iter)
 import(ebnm)
 import(nloptr)
 import(parallel)
