--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,7 @@ RoxygenNote: 7.2.3
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Imports: 
+  nloptr (>= 2.0.3)
+Remotes: 
+  github::stephenslab/ebnm
