--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,3 +26,4 @@ export(vga_pois_solver_bisection)
 export(vga_pois_solver_newton_1iter)
 import(ebnm)
 import(nloptr)
+importFrom(ebnm,ebnm_output_default)
